Fix up some of the tests